k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: <app_name>
  name: <app_name>
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: <app_name>
  template:
    metadata:
      labels:
        app: <app_name>
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: <app_name>
        image: <hub_url>/<app_name>:<app_version>
        # image: <hub_url>/<app_name>:453
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '300m'
            memory: '300Mi'
          requests:
            cpu: '50m'
            memory: '50Mi'
        ports:
        - containerPort: <app_port>
        readinessProbe:
          httpGet:
            path: <app_healthcheck>
            #path: /api/v1/healthcheck
            port: <app_port>
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: <app_healthcheck>
            #path: /api/v1/healthcheck
            port: <app_port>
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 5
      restartPolicy: Always
