k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: <app_name>
  name: <app_name>
  namespace: dev
spec:
  ports:
  - name: '<app_port>'
    port: <app_name>
    targetPort: <app_name>
  selector:
    app: <app_name>
status:
  loadBalancer: {}
