k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <app_name>
  labels:
    app: <app_name>
spec:
  ingressClassName: nginx
  rules:
  - host: <app_domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <app_name>
            port:
              number: <app_port>
